ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-node
spec:
  ingressClassName: nginx
  rules:
    - host: <the url u made up>.sctp-sandbox.com
      http:
        paths:
          - backend:
              service:
                name: hello-node
                port:
                  number: 80
            path: /
            pathType: Prefix
